# ListTalk

./: LICENSE  README.md  meson.build
ListTalk/: Array.h  Class.h  ListTalk.h  NativeClass.h  OOP.h  Object.h  Printer.h  REPL.h  Reader.h  String.h  Symbol.h  cmdopts.h  decl_macros.h  env_macros.h  error.h  printer.h  utils.h  value.h
ListTalk/classes/: AsconRNG.h  BigInteger.h  BindingDescriptor.h  Boolean.h  ByteVector.h  Character.h  Closure.h  ComplexNumber.h  CompoundForm.h  Condition.h  ConditionVariable.h  DateTime.h  Dictionary.h  DigestSHA256.h  Duration.h  DynamicVariable.h  EmptyIterator.h  ExactComplexNumber.h  Float.h  Fraction.h  Function.h  IOStream.h  IdentityDictionary.h  IdentitySet.h  ImmutableList.h  InexactComplexNumber.h  Instant.h  Integer.h  InvocationContextKind.h  Iterator.h  List.h  ListIterator.h  Macro.h  Message.h  MessageDigest.h  MessageQueue.h  MethodDescriptor.h  Mutex.h  Nil.h  Number.h  (+31 more)
ListTalk/macros/: arg_macros.h  decl_macros.h  env_macros.h  method_macros.h
ListTalk/utils/: base64.h  hex.h  ini.h  lock.h  utf8.h
ListTalk/utils/crypto/: ascon.h  sha256.h
ListTalk/vm/: Class.h  Environment.h  base_env.h  compiler.h  conditions.h  epoch.h  error.h  loader.h  metadata.h  stack_trace.h  tail_call.h  thread_state.h  throw_cacth.h  throw_catch.h  value.h  weak.h
classes/: Boolean.c  Closure.c  Macro.c  Nil.c  Object.c  Package.c  Pair.c  Primitive.c  Printer.c  Reader.c  SmallInteger.c  SpecialForm.c  String.c  Symbol.c  Vector.c
design/: class-descriptor.txt  classes.txt  immutable-list.txt  lambda-lists.txt  lexical-environment.txt  object-pointer.txt  syntax.txt
doc/: object-pointer.txt
listtalk-os-158-19-71-87/: data.lt
modules/: html-gen.lt
runtime/: init.lt
src/classes/: AsconRNG.c  BigInteger.c  BigInteger_internal.h  BindingDescriptor.c  Boolean.c  ByteVector.c  Character.c  Closure.c  ComplexNumber.c  CompoundForm.c  Condition.c  ConditionVariable.c  DateTime.c  Dictionary.c  DigestSHA256.c  DynamicVariable.c  EmptyIterator.c  ExactComplexNumber.c  Float.c  Fraction.c  Function.c  IOStream.c  IdentityDictionary.c  ImmutableList.c  InexactComplexNumber.c  Instant.c  Integer.c  InvocationContextKind.c  Iterator.c  List.c  ListIterator.c  Macro.c  Message.c  MessageDigest.c  MessageQueue.c  MethodDescriptor.c  Mutex.c  Nil.c  Number.c  Object.c  (+26 more)
src/modules/: cmdopts.c  gc.c  ini.c  json.c  os.c
src/repl/: REPL.c
src/utils/: base64.c  hex.c  ini.c  lock.c  utf8.c
src/utils/crypto/: ascon.c  sha256.c
src/vm/: Class.c  Environment.c  cmdopts.c  compiler.c  conditions.c  error.c  eval.c  init.c  loader.c  metadata.c  quasiquote.c  stack_trace.c  thread_state.c  throw_cacth.c  throw_catch.c  utils.c  value.c
src/vm/base_env/: base_env.c  bytevectors.c  cxxxr.c  internal.h  lists.c  loader.c  numbers.c  primitives.c  special_forms.c  strings.c  vectors.c
tests/: c_api_test.c  cmdopts_test.c  conditions_test.c  dictionary_test.c  eval-arithmetic-types.lt  eval-collections.lt  eval-crypto-rng.lt  eval-ini.lt  eval-json.lt  eval-language.lt  eval-loading-control.lt  eval-modules-os.lt  eval-objects.lt  eval-test.lt  eval_test.c  identity_dictionary_test.c  ini_test.c  listtalk_cli_test.py  lock_test.c  message_queue_test.c  reader_test.c  synchronization_classes_test.c  test-framework.lt  throw_cacth_test.c  throw_catch_test.c  uuid_test.c
tests/fixtures/: bar.lt  command-line.lt  foo.lt  test-module-bar.lt  test-module-foo.lt
tools/: embed_file_as_c.py  repl.c
vm/: Array.c  Class.c  OOP.c  Object.c  Printer.c  Reader.c  String.c  Symbol.c  base_env.c  error.c  eval.c  init.c  printer.c  reader.c  utils.c  value.c
